# TurnGame

./: CMakeLists.txt  README.md  config.json  sprites.json
assets/map/: map.json
src/: config.cpp  config.h  constants.h  entityManager.cpp  entityManager.h  game.cpp  game.h  hud.h  inputManager.cpp  inputManager.h  main.cpp  map.cpp  map.h  spriteManager.cpp  spriteManager.h
